<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_game"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="300dp"
    android:paddingHorizontal="7dp"
    android:paddingVertical="7dp"
    tools:context=".AddGameFragment">

    <TextView
        android:id="@+id/textView_game_title"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editText_game_title"/>

    <EditText
        android:id="@+id/editText_game_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="game title"
        android:hint="@string/game_title_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_game_title"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView_release_date"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_game_title"
        app:layout_constraintBottom_toBottomOf="@id/editText_release_date"/>

    <EditText
        android:id="@+id/editText_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="release date"
        android:imeOptions="actionNext"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:hint="@string/date_format_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_release_date"
        app:layout_constraintTop_toBottomOf="@id/editText_game_title"/>

    <TextView
        android:id="@+id/textView_catalog_date"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/catalog_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_release_date"
        app:layout_constraintBottom_toBottomOf="@id/editText_catalog_date"/>

    <EditText
        android:id="@+id/editText_catalog_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="catalog date"
        android:imeOptions="actionNext"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:hint="@string/date_format_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_catalog_date"
        app:layout_constraintTop_toBottomOf="@id/editText_release_date"/>

    <TextView
        android:id="@+id/textView_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/take_image_of_box_art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_take_picture"
        app:layout_constraintBottom_toBottomOf="@id/btn_take_picture"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        android:backgroundTint="@color/green_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_take_picture"
        app:layout_constraintTop_toBottomOf="@id/editText_catalog_date"/>

    <TextView
        android:id="@+id/textView_image_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/textView_image"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_name_field"
        app:layout_constraintBottom_toBottomOf="@id/image_name_field"/>

    <EditText
        android:id="@+id/image_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="image name"
        android:inputType="none"
        android:clickable="false"
        android:longClickable="false"
        android:visibility="gone"
        android:singleLine="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_take_picture"
        app:layout_constraintStart_toEndOf="@id/textView_image_name"/>

    <TextView
        android:id="@+id/textView_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_name_field"/>

    <EditText
        android:id="@+id/editText_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="notes"
        android:lines="2"
        android:inputType="textMultiLine"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_notes"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/btn_cancel_text"
        app:layout_constraintTop_toBottomOf="@id/editText_notes"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_add_text"
        app:layout_constraintTop_toBottomOf="@id/editText_notes"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>