<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_manufacturer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="300dp"
    android:paddingHorizontal="7dp"
    android:paddingVertical="7dp"
    tools:context=".AddManufacturerFragment">

    <TextView
        android:id="@+id/textView_manufacturer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_manufacturer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="manufacturer name"
        android:hint="@string/manufacturer_name_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_manufacturer_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/btn_cancel_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_manufacturer_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_add_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_manufacturer_name" />

</androidx.constraintlayout.widget.ConstraintLayout>