<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameInfoFragment">

    <TextView
        android:gravity="center"
        android:id="@+id/gameInfo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title_temp"
        android:textSize="40sp"
        android:ellipsize="end"
        android:minLines="1"
        android:maxLines="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/gameInfo_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/default_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameInfo_title"
        app:layout_constraintBottom_toTopOf="@id/gameInfo_releaseDate_text"
        />

    <TextView
        android:id="@+id/gameInfo_releaseDate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/release_date"
        android:padding="2dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gameInfo_catalogDate_text"/>

    <TextView
        android:id="@+id/gameInfo_releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/temp_date"
        android:padding="2dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toEndOf="@id/gameInfo_releaseDate_text"
        app:layout_constraintBottom_toBottomOf="@id/gameInfo_releaseDate_text"/>

    <TextView
        android:id="@+id/gameInfo_catalogDate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/catalog_date"
        android:padding="2dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gameInfo_notes_text"/>

    <TextView
        android:id="@+id/gameInfo_catalogDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/temp_date"
        android:padding="2dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toEndOf="@id/gameInfo_catalogDate_text"
        app:layout_constraintBottom_toBottomOf="@id/gameInfo_catalogDate_text"/>

    <TextView
        android:id="@+id/gameInfo_notes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gameInfo_notes"/>

    <TextView
        android:id="@+id/gameInfo_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_marginHorizontal="30dp"
        android:lines="6"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>